[CHANGE] Put the warrant back.
[CHANGE] Scoreboard now sorts the players on their class
[CHANGE] Replaced bad rating with "friendly" rating
[CHANGE] You can see what you rated someone, and the rated guy can see who rated him.
[CHANGE] Only super admins can set peoples money(Due to complaints of admins setting random people's money)
[CHANGE] Pressing F4 when the F4 menu is already open, closes it.
[FIX] When use protection is on, doors couldn't be opened by some people, now they can.
[FIX] Rare error with dropweapon
[FIX] Exploit with shipments: Exploding them with more than one explosive would make them spawn more guns than usual.
[FIX] Exploit with wire nailer
[FIX] Exploit that you can duplicate weapons(I made sure that you can't use toolgun on weapons AND I made sure you can't spawn saved weapons works on both normal dup and adv. dup)
[FIX] Bug that even if hungermod was off, food would still cost money.
[FIX] Gravgun punt punting far
[FIX] Not being able to use druglabs/money printers/whatever
[FIX] Vote screens being able to be there forever
[FIX] The save system not saving everything
[FIX] When looking at an item/door, the text won't be shaky anymore!
[FIX] Attempt to fix playerinitialspawn lag
[FIX] Attempt to fix walk speed lag
[FIX] /dropmoney text exploit
[FIX] The vote system was fucked, I completely renewed it(I now use Derma) and HOPEFULLY every shit problem you guys had with it is fixed!
[FIX] Prices etc. resetting to 0 (TO MAKE THIS HAVE EFFECT, REMOVE THE GLOBALS.txt FROM DATA/DARKRP ON THE SERVER!) 
[FIX] HUGE FUCKING MAJOR EXPLOIT where you enter a console command after doing /votecop or /votemayor and just become a cop without anyone voting yes.
[FIX] The ability of people to somehow get <nothing> as RP name(Always happened with bots too)
[FIX] People being able to get less than 0 money. DarkRP just doesn't work with depts 